<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/n3"
    android:clipToPadding="false"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_waves"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/routeSelectionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/route_selection_title"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/n1"
                app:cardCornerRadius="12dp"
                app:cardElevation="2dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/fromTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:hint="@string/route_from_placeholder"
                            android:padding="16dp"
                            android:textColor="@color/n2"
                            android:textColorHint="@color/n2_20"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/toTv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="?attr/selectableItemBackground"
                            android:hint="@string/route_to_placeholder"
                            android:padding="16dp"
                            android:textColor="@color/n2"
                            android:textColorHint="@color/n2_20"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_gravity="center_vertical"
                        android:background="@color/n2_5" />

                    <ImageView
                        android:id="@+id/switchCitiesBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center_vertical"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/bg_switch_cities"
                        android:padding="4dp"
                        app:srcCompat="@drawable/ic_switch_white"
                        tools:ignore="ContentDescription" />

                </FrameLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/searchBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="sans-serif-black"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/route_find_tickets"
                android:textAllCaps="false"
                app:cornerRadius="12dp" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>